sources/lab/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lab
  namespace: heron
spec:
  selector:
    app: lab
  ports:
    - name: proxy
      port: 4180
